<?xml version="1.0"?>
<package format="2">
  <name>land_bridge</name>
  <version>1.2.5</version>
  <description>
      Bridge for connecting Mavors and camera.
  </description>


  <author>Haozh</author>
  <maintainer email="Haozh@123.com">Haozh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
